Fixes wysiwyg overflow

--- a/client/src/shared/components/Wysiwyg/Wysiwyg.module.css
+++ b/client/src/shared/components/Wysiwyg/Wysiwyg.module.css
@@ -9,6 +9,7 @@
   cursor: text;
   min-height: 80px;
   padding: 10px;
+  overflow-y: auto;
 }
 
 .toolbar {
